# haproxy-api-rs

./: Cargo.toml  README.md
examples/async_serve_file/: Cargo.toml  docker-compose.yml  haproxy.cfg
examples/brotli/: Cargo.toml  docker-compose.yml  haproxy.cfg
examples/brotli/src/: lib.rs
examples/prometheus/: Cargo.toml  Dockerfile  docker-compose.yml  haproxy.cfg  haproxy.lua
examples/prometheus/src/: lib.rs
examples/simple/: Cargo.toml  docker-compose.yml  haproxy.cfg
src/: async.rs  channel.rs  converters.rs  core.rs  event_sub.rs  fetches.rs  filter.rs  http.rs  http_message.rs  lib.rs  listener.rs  proxy.rs  server.rs  stick_table.rs  txn.rs
