[package]
name = "haproxy_prometheus_module"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
form_urlencoded = { version = "1.2.2", features = [
    "alloc",
], default-features = false }
haproxy-api = { path = "../.." }
mlua = { version = "0.11", features = ["macros"] }
prometheus = { version = "0.14.0", default-features = false }
